--- a/assets/css/admin/admin.css
+++ b/assets/css/admin/admin.css
@@ -87,14 +87,31 @@ form label:first-child{
   -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
   box-shadow: 0 1px 2px rgba(0,0,0,.05);
 }
+.form-signup {
+  max-width: 500px;
+  padding: 19px 29px 29px;
+  margin: 0 auto 20px;
+  background-color: #fff;
+  border: 1px solid #e5e5e5;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+  -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+  box-shadow: 0 1px 2px rgba(0,0,0,.05);
+}
 
 .form-signin .form-signin-heading,
-.form-signin .checkbox {
+.form-signin .checkbox,
+.form-signup .form-signin-heading,
+.form-signup .checkbox {
   margin-bottom: 10px;
 }
 
 .form-signin input[type="text"],
-.form-signin input[type="password"] {
+.form-signin input[type="password"],
+.form-signup input[type="text"],
+.form-signup input[type="password"] {
   font-size: 16px;
   height: auto;
   margin-bottom: 15px;
